@@ -31,7 +31,9 @@ import uk.gov.hmcts.divorce.divorcecase.model.access.CaseworkerAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.CaseworkerAccessOnlyAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.CaseworkerAndSuperUserAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.CaseworkerBulkScanAccess;
+import uk.gov.hmcts.divorce.divorcecase.model.access.CaseworkerDeleteAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.CaseworkerWithCAAAccess;
+import uk.gov.hmcts.divorce.divorcecase.model.access.CitizenAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.DefaultAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.InternalCaseFlagsAccess;
 import uk.gov.hmcts.divorce.divorcecase.model.access.SolicitorAccess;
@@ -54,7 +56,6 @@ import static java.lang.Integer.parseInt;
 import static java.util.Collections.singletonList;
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.emptyIfNull;
 import static org.springframework.util.CollectionUtils.isEmpty;
 import static uk.gov.hmcts.ccd.sdk.type.FieldType.CasePaymentHistoryViewer;
@@ -113,7 +114,10 @@ public class CaseData {
 
     @JsonUnwrapped(prefix = "labelContent")
     @Builder.Default
-    @CCD(access = {DefaultAccess.class})
+    @CCD(
+        access = {DefaultAccess.class},
+        searchable = false
+    )
     private LabelContent labelContent = new LabelContent();
 
     @JsonUnwrapped(prefix = "applicant1")
@@ -147,7 +151,10 @@ public class CaseData {
     @CCD(access = {DefaultAccess.class})
     private ConditionalOrder conditionalOrder = new ConditionalOrder();
 
-    @CCD(access = {DefaultAccess.class, Applicant2Access.class})
+    @CCD(
+        access = {DefaultAccess.class, Applicant2Access.class},
+        searchable = false
+    )
     private String citizenPaymentCallbackUrl;
 
     @JsonUnwrapped()
@@ -181,7 +188,8 @@ public class CaseData {
         label = "General Applications",
         typeOverride = Collection,
         typeParameterOverride = "GeneralApplication",
-        access = {SolicitorAndSystemUpdateAccess.class}
+        access = {SolicitorAndSystemUpdateAccess.class, CitizenAccess.class},
+        searchable = false
     )
     private List<ListValue<GeneralApplication>> generalApplications;
 
@@ -189,7 +197,8 @@ public class CaseData {
         label = "General Referrals",
         typeOverride = Collection,
         typeParameterOverride = "GeneralReferral",
-        access = {SystemUpdateAndSuperUserAccess.class}
+        access = {SystemUpdateAndSuperUserAccess.class},
+        searchable = false
     )
     private List<ListValue<GeneralReferral>> generalReferrals;
 
@@ -204,7 +213,8 @@ public class CaseData {
     private YesOrNo isJudicialSeparation;
 
     @CCD(
-        access = {DefaultAccess.class}
+        access = {DefaultAccess.class},
+        searchable = false
     )
     private YesOrNo caseFlagsSetupComplete;
 
@@ -212,7 +222,8 @@ public class CaseData {
         label = "Previous Service Applications",
         typeOverride = Collection,
         typeParameterOverride = "AlternativeServiceOutcome",
-        access = {CaseworkerAccessOnlyAccess.class}
+        access = {CaseworkerAccessOnlyAccess.class},
+        searchable = false
     )
     private List<ListValue<AlternativeServiceOutcome>> alternativeServiceOutcomes;
 
@@ -234,7 +245,8 @@ public class CaseData {
 
     @CCD(
         label = "General Orders",
-        access = {CaseworkerAccessOnlyAccess.class}
+        access = {CaseworkerAccessOnlyAccess.class},
+        searchable = false
     )
     private List<ListValue<DivorceGeneralOrder>> generalOrders;
 
@@ -256,7 +268,8 @@ public class CaseData {
         label = "Notes",
         typeOverride = Collection,
         typeParameterOverride = "CaseNote",
-        access = {CaseworkerAndSuperUserAccess.class}
+        access = {CaseworkerAndSuperUserAccess.class},
+        searchable = false
     )
     private List<ListValue<CaseNote>> notes;
 
@@ -264,7 +277,8 @@ public class CaseData {
         label = "Add a case note",
         hint = "Enter note",
         typeOverride = TextArea,
-        access = {CaseworkerAndSuperUserAccess.class}
+        access = {CaseworkerAndSuperUserAccess.class},
+        searchable = false
     )
     private String note;
 
@@ -275,7 +289,10 @@ public class CaseData {
     )
     private CaseLink bulkListCaseReferenceLink;
 
-    @CCD(access = {DefaultAccess.class})
+    @CCD(
+        access = {DefaultAccess.class},
+        searchable = false
+    )
     @JsonUnwrapped
     private RetiredFields retiredFields;
 
@@ -286,8 +303,9 @@ public class CaseData {
     private ChangeOrganisationRequest<CaseRoleID> changeOrganisationRequestField;
 
     @CCD(
-            access = {DefaultAccess.class, AcaSystemUserAccess.class, CaseworkerAccess.class},
-            label = "Change of representatives"
+        access = {DefaultAccess.class, AcaSystemUserAccess.class, CaseworkerAccess.class},
+        label = "Change of representatives",
+        searchable = false
     )
     @Builder.Default
     private List<ListValue<ChangeOfRepresentative>> changeOfRepresentatives = new ArrayList<>();
@@ -307,7 +325,8 @@ public class CaseData {
         label = "General emails",
         typeOverride = Collection,
         typeParameterOverride = "GeneralEmailDetails",
-        access = {SystemUpdateAndSuperUserAccess.class}
+        access = {SystemUpdateAndSuperUserAccess.class},
+        searchable = false
     )
     private List<ListValue<GeneralEmailDetails>> generalEmails;
 
@@ -315,7 +334,8 @@ public class CaseData {
         label = "Confidential general emails",
         typeOverride = Collection,
         typeParameterOverride = "GeneralEmailDetails",
-        access = {SystemUpdateAndSuperUserAccess.class}
+        access = {SystemUpdateAndSuperUserAccess.class},
+        searchable = false
     )
     private List<ListValue<GeneralEmailDetails>> confidentialGeneralEmails;
 
@@ -333,7 +353,8 @@ public class CaseData {
         label = "General letters",
         typeOverride = Collection,
         typeParameterOverride = "GeneralLetterDetails",
-        access = {SystemUpdateAndSuperUserAccess.class}
+        access = {SystemUpdateAndSuperUserAccess.class},
+        searchable = false
     )
     private List<ListValue<GeneralLetterDetails>> generalLetters;
 
@@ -346,9 +367,9 @@ public class CaseData {
 
     @JsonProperty("TTL")
     @CCD(
-            label = "Set up TTL",
-            typeOverride = FieldType.TTL,
-            access = {TtlProfileAccess.class, SystemUpdateAndSuperUserAccess.class}
+        label = "Set up TTL",
+        typeOverride = FieldType.TTL,
+        access = {TtlProfileAccess.class, SystemUpdateAndSuperUserAccess.class}
     )
     private TTL retainAndDisposeTimeToLive;
 
@@ -360,7 +381,8 @@ public class CaseData {
         label = "Case matches",
         typeOverride = Collection,
         typeParameterOverride = "CaseMatch",
-        access = {CaseworkerAccess.class}
+        access = {CaseworkerAccess.class, CaseworkerDeleteAccess.class},
+        searchable = false
     )
     @JsonInclude(JsonInclude.Include.NON_EMPTY)  // Only include in JSON if non-empty
     @Builder.Default
@@ -368,16 +390,21 @@ public class CaseData {
 
     @CCD(
         label = "Launch the Flags screen",
-        access = {InternalCaseFlagsAccess.class}
+        access = {InternalCaseFlagsAccess.class},
+        searchable = false
     )
     private FlagLauncher internalFlagLauncher;
 
-    @CCD(access = {InternalCaseFlagsAccess.class},
-        label = "Case Flags")
+    @CCD(
+        access = {InternalCaseFlagsAccess.class},
+        label = "Case Flags",
+        searchable = false
+    )
     private Flags caseFlags;
 
     @JsonUnwrapped
     @Builder.Default
+    @CCD(searchable = false)
     private PartyFlags partyFlags = new PartyFlags();
 
     @JsonIgnore
@@ -588,11 +615,16 @@ public class CaseData {
                 .findFirst();
 
         scannedDocumentOptional.ifPresent(
-            scannedDocumentListValue ->
+            scannedDocumentListValue -> {
                 reclassifyScannedDocumentToChosenDocumentType(
                     documentType,
                     clock,
-                    scannedDocumentListValue.getValue())
+                    scannedDocumentListValue.getValue());
+
+                if (REQUEST_FOR_INFORMATION_RESPONSE_DOC.equals(documentType)) {
+                    documents.getScannedDocuments().remove(scannedDocumentOptional.get());
+                }
+            }
         );
     }
 
@@ -638,7 +670,7 @@ public class CaseData {
     public <T> List<T> fromListValueToList(final List<ListValue<T>> targetList) {
         return targetList.stream()
             .map(ListValue::getValue)
-            .collect(toList());
+            .toList();
     }
 
     @JsonIgnore
@@ -652,6 +684,13 @@ public class CaseData {
                 addDocumentToTop(this.getDocuments().getDocumentsUploaded(), divorceDocumentListValue.getValue()));
         });
 
+        updateCaseWithGeneralApplication(this.generalApplication);
+
+        generalApplication.setGeneralApplicationTypeOtherComments(null);
+    }
+
+    @JsonIgnore
+    public void updateCaseWithGeneralApplication(GeneralApplication generalApplication) {
         final ListValue<GeneralApplication> generalApplicationListValue = ListValue.<GeneralApplication>builder()
             .id(UUID.randomUUID().toString())
             .value(generalApplication.toBuilder().build())
@@ -662,7 +701,5 @@ public class CaseData {
         } else {
             this.getGeneralApplications().add(0, generalApplicationListValue);
         }
-
-        generalApplication.setGeneralApplicationTypeOtherComments(null);
     }
 }
